loader, toast, y logiar

--- a/src/app/pages/auth/auth.page.html
+++ b/src/app/pages/auth/auth.page.html
@@ -8,6 +8,8 @@
 
       <app-logo></app-logo>
 
+      <!--=========== mail ===============-->
+
       <app-custom-input
         icon="mail-outline"
         autocomplete="email"  
@@ -20,7 +22,9 @@
         <div *ngIf="form.controls.email.errors?.['required']">El correo es requerido</div>
         <div *ngIf="form.controls.email.errors?.['email']">Ingrese un correo valido</div>
       </div>
-  
+      
+
+      <!--=========== password ===============-->
       <app-custom-input
         icon="lock-closed-outline"
         [control]="form.controls.password" 
