--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -1,13 +1,70 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>sign-up</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="registro"></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">sign-up</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+<ion-content>
+
+  <div class="d-flex-center">
+    <form [formGroup]="form" class="auth-form" (ngSubmit)="submit()" (keypress.enter)="submit()">
+
+      <app-logo></app-logo>
+
+      <!--=========== name ===============-->
+      <app-custom-input
+        icon="person-outline"
+        autocomplete="name"  
+        [control]="form.controls.name" 
+        type="text"
+        label="Nombre"
+      ></app-custom-input>
+
+      <div class="validators" *ngIf="form.controls.name.errors && form.controls.name.touched">
+        <div *ngIf="form.controls.name.errors?.['required']">El correo es requerido</div>
+        <div *ngIf="form.controls.name.errors?.['minlenght']">El nombre deber de tener al menos 4 caracteres</div>
+      </div>
+
+      <!--=========== mail ===============-->
+      <app-custom-input
+        icon="mail-outline"
+        autocomplete="email"  
+        [control]="form.controls.email" 
+        type="email"
+        label="Correo"
+      ></app-custom-input>
+
+      <div class="validators" *ngIf="form.controls.email.errors && form.controls.email.touched">
+        <div *ngIf="form.controls.email.errors?.['required']">El correo es requerido</div>
+        <div *ngIf="form.controls.email.errors?.['email']">Ingrese un correo valido</div>
+      </div>
+      
+      <!--=========== password ===============-->
+      <app-custom-input
+        icon="lock-closed-outline"
+        [control]="form.controls.password" 
+        type="password"
+        label="Contraseña"
+      ></app-custom-input>
+
+      <div class="validators" *ngIf="form.controls.password.errors && form.controls.password.touched">
+        <div *ngIf="form.controls.password.errors?.['required']">La contraseña es requerido</div>
+        
+      </div>
+
+      
+
+      <ion-button type="submit" expand="block"  mode="ios" class="submit" [disabled]="form.invalid">
+        Registrate
+        <ion-icon slot="end" name="person-add-outline"></ion-icon>
+      </ion-button>
+
+      
+
+    </form>
+  </div>
+
+  
+  
 </ion-content>
+
+<!--  
+  [control]="form.controls.email" conectamos el input con la variable en auth dentro del form
+\--> 
