--- a/src/app/pages/auth/sign-up/sign-up.page.html
+++ b/src/app/pages/auth/sign-up/sign-up.page.html
@@ -1,4 +1,4 @@
-<app-header title="registro"></app-header>
+<app-header backButton="/auth" title="registro"></app-header>
 
 
 <ion-content>
@@ -18,7 +18,7 @@
       ></app-custom-input>
 
       <div class="validators" *ngIf="form.controls.name.errors && form.controls.name.touched">
-        <div *ngIf="form.controls.name.errors?.['required']">El correo es requerido</div>
+        <div *ngIf="form.controls.name.errors?.['required']">El nombre es requerido</div>
         <div *ngIf="form.controls.name.errors?.['minlenght']">El nombre deber de tener al menos 4 caracteres</div>
       </div>
 
